Разнос по файлам

--- a/Project_dz3.8.vcxproj
+++ b/Project_dz3.8.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Functions.cpp" />
     <ClCompile Include="Overcoat.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
